--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 }
 .main-navigation {
 	float: left;
-	width: 370px;
+	width: 384px;
 	min-height: 64px;
 }
 .main-nav {
@@ -36,8 +36,6 @@ body {
 	padding: 0;
 	min-height: 64px;
 	font-size: 0;
-	/*margin-right: 326px;*/
-	
 }
 .main-nav  li {
 	display: inline-block;
@@ -53,26 +51,61 @@ body {
 	color: #ffffff;
 	font-family: "Roboto", "Tahoma", sans-serif;
 	text-decoration: none;
-	border-bottom: 1px solid #ffffff ;
 }
 .main-nav  li:last-child a {
-	padding-right: 0;
+	/*padding-right: 0;*/
 	padding-left: 15px;
 }
-.main-nav li:first-child a {
+.main-nav .active {
 	background: #d07058;
 	border-radius: 16px;
 	border-bottom: none;
 }
-.main-nav li:first-child a:hover {
-	background-color: #ffffff;
+.main-nav li a:hover {
 	color: #000000;
+	background-color: #ffffff;
 	border-radius: 20px;
+}
+.main-nav li a:active {
+  background:    -moz-linear-gradient(top, #ededed 0%, #ededed 100%);
+  background: -webkit-linear-gradient(top, #ededed 0%, #ededed 100%);
+  background:         linear-gradient(to bottom, #ededed 0%, #ededed 100%);
+  box-shadow: inset 0 2px 2px rgba(105, 105, 105, 1);
+}
+.main-navigation .li-1::after {
+	content: "";
+	position: absolute;
+	top: 38px;
+	margin-left: 15px;
+	width: 60px;
+	height: 1px;
+	background-color: #ffffff;
+	opacity: 0.2;
+}
+.main-navigation .li-2::after {
+	content: "";
+	position: absolute;
+	top: 38px;
+	margin-left: 14px;
+	width: 142px;
+	height: 1px;
+	background-color: #ffffff;
+	opacity: 0.2;
+}
+.main-navigation .li-3::after {
+	content: "";
+	position: absolute;
+	top: 38px;
+	margin-left: 16px;
+	width: 90px;
+	height: 1px;
+	background-color: #ffffff;
+	opacity: 0.2;
 }
 .user-block {
 	float: right;
 	max-width: 328px;
-	margin-left: 250px;
+	margin-left: 236px;
 }
 .user-block .search  	{
 	position: relative;
@@ -102,7 +135,6 @@ body {
 	font-family: "Roboto", "Tahoma", sans-serif;
 	vertical-align: top;	
 }
-
 .user-block .search {
 	padding-left: 20px;
 	padding-right: 20px;
@@ -520,6 +552,11 @@ body > input[type="radio"] {
 	font-family: "Roboto", "Tahoma", sans-serif;
 	text-align: center;
 }
+.catalog-ice:hover {
+	background-color: red;
+	opacity: 0.2;
+	z-index: 1;
+}
 	/*-- БЛОК ОПИСАНИЯ КОМПАНИИ --*/
 .description {
 	width: 1146px;
@@ -803,8 +840,12 @@ body > input[type="radio"] {
 /*-- /ГЛАВНАЯ СТРАНИЦА --*/
 
 
-/*-- СТРАНИЦА КАТАЛОГА МОРОЖЕННОГО --*/
+/*-- СТРАНИЦА CATALOG --*/
+/*.main-nav li:first-child a {
+	position: relative;
 
+	background: none !important;
+}*/
 	/*-- БЛОК ВЫБОРА МОРОЖЕННЫХ --*/
 .selection-ice h2 {
 	font-size: 35px;
@@ -839,13 +880,12 @@ body > input[type="radio"] {
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	background-image: #ffffff; /* не работает почему?*/
-	/*opacity: 0.2;*/
-	/*position: relative;*/
+	background-image: #ffffff; 
 }
 	/*-- /БЛОК ВЫБОРА МОРОЖЕННЫХ --*/
 
 	/*-- БЛОК АССОРТИМЕНТА МОРОЖЕННЫХ --*/
+
 .goods .case-catalog  {
 	float: left;
 	width: 267px;
@@ -926,7 +966,7 @@ body > input[type="radio"] {
 	text-decoration: none;
 }
 	/*-- /БЛОК АССОРТИМЕНТА МОРОЖЕННЫХ --*/
-/*-- /СТРАНИЦА КАТАЛОГА МОРОЖЕННОГО --*/
+/*-- /СТРАНИЦА CATALOG --*/
 
 /*-- ПОДВАЛ --*/
 	/*-- СОЦИАЛЬНЫЕ КНОПКИ --*/
@@ -1086,13 +1126,59 @@ body > input[type="radio"] {
 	/*text-decoration: none;*/
 }
 /*-- ВСПЛЫВАЮЩИЕ МОДАЛЬНЫЕ ОКНА --*/
+	/*-- ОКНО ПОИСКА --*/
+.modal-search {
+	position: absolute;
+	top: 50px;
+	right: 295px;
+	border-radius: 15px;
+	display: none;
+	width: 341px;
+	height: 84px;
+	background: #f8f7f4;
+	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	font-size: 14px;
+	line-height: 24px;
+	color: #999999;
+	font-weight: 400;
+	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.modal-search  .search-form {
+	margin-left: 15px;
+	margin-right: 15px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.search-form .search {
+	width: 294px;
+	height: 42px;
+	border-radius: 15px;
+	margin: 0;
+	padding-left: 14px;
+	padding-top: 0;
+	padding-bottom: 0;
+	font-size: 14px;
+	line-height: 24px;
+	color: #999999;
+	font-weight: 400;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	border-radius: 5px;
+	border: 1px solid #d3d3d2;
+}
+.search-form .search:hover {
+	border: 2px solid #d3d3d2;
+}
+.search-form .search:focus {
+	border: 2px solid #8fbdec;
+}
+
 	/*-- ОКНО ВХОДА --*/
 .modal-in {
 	position: absolute;
 	top: 50px;
-	right: 190px;
+	right: 205px;
 	border-radius: 15px;
-	/*display: none;*/
+	display: none;
 	width: 277px;
 	height: 214px;
 	background: #f8f7f4;
@@ -1139,9 +1225,9 @@ body > input[type="radio"] {
 	bottom: 22px;
 	left: 18px;
 	display: inline-block;
-	vertical-align: top;
 	width: 102px;
 	height: 44px;
+	vertical-align: top;
 	margin-top: 15px;
 	text-align: center;
 	font-size: 18px;
@@ -1161,19 +1247,17 @@ body > input[type="radio"] {
 	box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
 }
 .btn-modal-in:hover {
-  background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
-  background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
-  background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
-  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+	background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+	background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+	background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+	box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
 }
 .btn-modal-in:active {
-  background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
-  background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
-  background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
-  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
-  border: none;
+	background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
+	background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
+	background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+	box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 }
-
 .restore-registration {
 	position: absolute;
 	bottom: 15px;
@@ -1189,6 +1273,153 @@ body > input[type="radio"] {
 	font-family: "Roboto", "Tahoma", sans-serif;
 }
 	/*-- /ОКНО ВХОДА --*/
+	
+	/*-- ОКНО ОБРАТНОЙ СВЯЗИ--*/
+.modal-feedback	{
+	position: absolute;
+	top: 500px;
+	right: 295px;
+	border-radius: 15px;
+	display: none;
+	width: 477px;
+	height: 442px;
+	background: #f8f7f4;
+	box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+	font-size: 14px;
+	line-height: 24px;
+	color: #999999;
+	font-weight: 400;
+	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.btn-modal-feedback-close {
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	width: 18px;
+	height: 17px;
+	font-size: 0;
+	background-color: transparent;
+	border: 0;
+	cursor: pointer;
+}
+.btn-modal-feedback-close::before,
+.btn-modal-feedback-close::after {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 1px;
+  width: 17px;
+  height: 3px;
+  background-color: #000000;
+  border-radius: 1px;
+}
+.btn-modal-feedback-close::before {
+  transform: rotate(45deg);
+}
+.btn-modal-feedback-close::after {
+  transform: rotate(-45deg);
+}
+.modal-feedback h2 {
+	margin-top: 18px;
+	margin-left: 24px;
+	margin-bottom: 23px;
+	font-size: 24px;
+	line-height: 28px;
+	color: #000000;
+	font-weight: 500;
+	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.modal-feedback  .feedback-form {
+	margin-left: 24px;
+}
+.feedback-form .feedback-name,
+.feedback-form .feedback-email  {
+	width: 251px;
+	height: 42px;
+	border-radius: 15px;
+	margin: 0;
+	margin-bottom: 20px;
+	margin-right: 186px;
+	padding-top: 0;
+	padding-left: 14px;
+	padding-bottom: 0;
+	font-size: 16px;
+	line-height: 24px;
+	color: #999999;
+	font-weight: 400;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	border-radius: 5px;
+	border: 1px solid #d3d3d2;
+}
+.feedback-form .feedback-name:hover,
+.feedback-form .feedback-email:hover {
+	border: 2px solid #d3d3d2;
+}
+.feedback-form .feedback-name:active,
+.feedback-form .feedback-email:active {
+	border: 2px solid #8fbdec;
+}
+.feedback-form .feedback-text  {
+	width: 412px;
+	height: 141px;
+	border-radius: 15px;
+	margin: 0;
+	margin-bottom: 20px;
+	padding-top: 0;
+	padding-left: 14px;
+	padding-top: 6px;
+	padding-bottom: 0;
+	font-size: 16px;
+	line-height: 24px;
+	color: #999999;
+	font-weight: 400;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	border-radius: 5px;
+	border: 1px solid #d3d3d2;
+}
+.feedback-form .feedback-text:hover {
+	border: 2px solid #d3d3d2;
+}
+.feedback-form .feedback-text:active {
+	border: 2px solid #8fbdec;
+}
+.btn-modal-feedback {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	padding: 11px 24px;
+	margin-left: 290px;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 24px;
+	vertical-align: top;
+	color: #ffffff;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	text-decoration: none;
+	text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+	background: #f26843;
+	background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+	background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+	background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+	border-radius: 100px;
+	box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+	border: none;
+}
+.btn-modal-feedback:hover {
+	background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+	background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+	background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+	box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+.btn-modal-feedback:active {
+	background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
+	background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
+	background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+	box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+	/*-- /ОКНО ОБРАТНОЙ СВЯЗИ--*/
+	
 	/*-- КАРТА --*/
 .modal-map {
 	position: fixed;
