--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,14 @@ body {
 	width: 153px;
 	min-height: 64px;
 	margin: 0;
-	margin-right: 11px;
+	margin-right: 10px;
+    margin-top: 9px;
 }
 .main-navigation {
 	float: left;
 	width: 384px;
 	min-height: 64px;
+	margin-top: 9px;
 }
 .main-nav {
 	list-style: none;
@@ -75,8 +77,8 @@ body {
 .main-navigation .li-1::after {
 	content: "";
 	position: absolute;
-	top: 38px;
-	margin-left: 15px;
+	top: 47px;
+	margin-left: 14px;
 	width: 60px;
 	height: 1px;
 	background-color: #ffffff;
@@ -85,7 +87,7 @@ body {
 .main-navigation .li-2::after {
 	content: "";
 	position: absolute;
-	top: 38px;
+	top: 47px;
 	margin-left: 14px;
 	width: 142px;
 	height: 1px;
@@ -95,7 +97,7 @@ body {
 .main-navigation .li-3::after {
 	content: "";
 	position: absolute;
-	top: 38px;
+	top: 47px;
 	margin-left: 16px;
 	width: 90px;
 	height: 1px;
@@ -106,13 +108,14 @@ body {
 	float: right;
 	max-width: 328px;
 	margin-left: 236px;
+	margin-top: 9px;
 }
 .user-block .search  	{
 	position: relative;
 	display: inline-block;
 	vertical-align: top;
 	margin: 0;
-	margin-top: 11px;
+	margin-top: 14px;
 	line-height: 16px;
 	font-weight: 500;
 	color: #ffffff;
@@ -124,8 +127,8 @@ body {
 	position: relative;
 	display: inline-block;
 	margin: 0;
-	margin-top: 11px;
-	padding: 11px 0px;
+	margin-top: 14px;
+	padding: 8px 0px;
 	text-decoration: none;
 	vertical-align: top;
 	font-size: 14px;
@@ -136,10 +139,11 @@ body {
 	vertical-align: top;	
 }
 .user-block .search {
-	padding-left: 20px;
+	padding-left: 13px;
 	padding-right: 20px;
 	padding-bottom: 8px;
-	padding-top: 14px;
+	padding-top: 8px;
+	margin-right: 3px;
 	background: #9db1a5;
 	border-radius: 100%;
 }
@@ -148,14 +152,14 @@ body {
 	padding-right: 17px;
 	background: #9db1a5;
 	border-radius: 18px;
-	margin-right: 10px;
-	margin-left: 10px;
+	margin-right: 5px;
+	margin-left: 3px;
 }
 .user-block .basket {
 	padding-left: 45px;
-	padding-right: 34px;
+	padding-right: 33px;
 	background: #9db1a5;
-	border-radius: 18px;
+	border-radius: 100px;
 }
 
 /*-- ПОИСК ИКОНКА--*/
@@ -165,8 +169,8 @@ body {
 .user-block .search::after {
 	content: "";
 	position: absolute;
-	top: 3px;
-	left:4px;
+	top: -1px;
+	left: -1px;
 	width: 33px;
 	height: 33px;
 	background: transparent url("../img/loupe.png") no-repeat;
@@ -186,7 +190,7 @@ body {
 .user-block .login::after {
 	content: "";
 	position: absolute;
-	top: 9px;
+	top: 6px;
 	left: 16px;
 	width: 21px;
 	height: 19px;
@@ -205,8 +209,8 @@ body {
 .user-block .basket::after {
 	content: "";
 	position: absolute;
-	top: 9px;
-	left: 16px;
+	top: 6px;
+	left: 17px;
 	width: 21px;
 	height: 19px;
 	background: transparent url("../img/basket_empty.png") no-repeat;
@@ -223,7 +227,7 @@ body {
 /*-- ВРЕМЯ --*/
 .timework-tel {
 	float: right;
-	margin-top: 19px;
+	margin-top: 15px;
 	width: 175px;
 	text-align: right;
 }
@@ -236,7 +240,7 @@ body {
 }
 .timework-tel .tel {
 	font-size: 22px;
-	line-height: 24px;
+	line-height: 28px;
 	font-weight: 700;
 	color: #ffffff;
 	font-family: "Roboto", "Tahoma", sans-serif;
@@ -254,6 +258,7 @@ body {
 	display: inline-block;
 }
 .bread-main-nav  li a {	
+	position: relative;
 	display: block;
 	font-size: 14px;
 	line-height: 16px;
@@ -261,9 +266,23 @@ body {
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
 	text-decoration: none;
+	padding-right: 15px;
+	/*background: #000000;*/
 }
 .bread-main-nav  li:last-child a {
 	text-decoration: none;
+}
+.bread-main-nav  a::after{
+	content: "";
+	position: absolute;
+	top: 4px;
+	right: 0px;
+	width: 9px;
+	height: 9px;
+	background: transparent url("../img/arrow_s_right.png") no-repeat;
+}
+.bread-main-nav li:last-child a::after{
+	content: none;
 }
 /*-- /БЛОК ХЛЕБНЫХ КРОШЕК--*/
 
@@ -294,7 +313,7 @@ body > input[type="radio"] {
 }
 .site-wrapper {
 	min-width: 1146px;
-	min-height: 2416px; /* для демо */
+	min-height: 2416px; 
 	background-repeat: no-repeat;
 	background-position: top center;
 	transition: background-image 0.5s ease, 
@@ -302,7 +321,7 @@ body > input[type="radio"] {
 }
 .slider {
 	position: relative;
-	padding-top: 281px;
+	padding-top: 274px;
 	text-align: center;
 	color: #ffffff;
 }
@@ -320,8 +339,8 @@ body > input[type="radio"] {
 }
 .slide-btn {
 	display: inline-block;
-	padding: 12px 50px;
-	margin-bottom: 30px;
+	padding: 10px 40px;
+	margin-bottom: 39px;
 	font-weight: 600;
 	font-size: 32px;
 	line-height: 44px;
@@ -351,7 +370,7 @@ body > input[type="radio"] {
 }
 .slider-controls {
 	position: absolute;
-	bottom: 40px;
+	bottom: 61px;
 	left: 0;
 	z-index: 20;
 	font-size: 0;
@@ -417,8 +436,8 @@ body > input[type="radio"] {
 .promo-action span {
 	display: block;
 	margin: 0;
-	margin-top: 20px;
-	margin-left: 20px;
+	margin-top: 17px;
+	margin-left: 19px;
 	padding: 0;
 	font-size: 35px;
 	line-height: 41px;
@@ -429,7 +448,7 @@ body > input[type="radio"] {
 .promo-action p {
 	display: block;
 	margin: 0;
-	margin-top: 23px;
+	margin-top: 15px;
 	margin-left: 20px;
 	margin-right: 15px;
 	padding: 0;
@@ -443,7 +462,7 @@ body > input[type="radio"] {
 	display: inline-block;
 	float: right;
 	width: 165px;
-	margin-top: 29px;
+	margin-top: 43px;
 	margin-right: 21px;
 	margin-bottom: 24px;
 	padding: 12px 0px;
@@ -479,7 +498,7 @@ body > input[type="radio"] {
 	display: inline-block;
 	float: right;
 	width: 189px;
-	margin-top: 29px;
+	margin-top: 42px;
 	margin-right: 21px;
 	margin-bottom: 24px;
 	padding: 12px 0px;
@@ -519,6 +538,7 @@ body > input[type="radio"] {
 	margin-right: 26px;
 	margin-top: 40px;
 	margin-bottom: 40px;
+	cursor: pointer;
 }
 .catalog-ice .tag {
 	position: absolute;
@@ -526,60 +546,78 @@ body > input[type="radio"] {
 .catalog .catalog-ice:last-child {
 	margin-right: 0;
 }
-.catalog .catalog-ice img {
-	border-radius: 135px;
+.catalog-ice .big-ice {
+	border-radius: 1000px;
 }
 .catalog-ice .cost {
 	float: left;
 	width: 267px;
 	height: 45px;
 	position: relative;
-	bottom: 60px;
+	bottom: 63px;
+	font-size: 45px;
+	line-height: 45px;
+	color: #ffffff;
+	font-weight: 700;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	text-shadow: 1px 1px 3px #5a6762;
+	cursor: pointer;
+}
+.catalog-ice .weight {
 	font-size: 32px;
 	line-height: 45px;
 	color: #ffffff;
 	font-weight: 700;
 	font-family: "Roboto", "Tahoma", sans-serif;
+	text-shadow: 1px 1px 3px #5a6762;
+	margin-left: 6px;
 	cursor: pointer;
 }
 .catalog-ice .specification {
 	position: relative;
-	bottom: 35px;
+	bottom: 37px;
 	font-size: 16px;
 	line-height: 22px;
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
+	/*text-decoration: underline;*/
 	text-align: center;
-}
+}/*
+.catalog-ice .specification:hover {
+	text-decoration: underline;
+	underline-opacity: 0.2; 
+	/*opacity: 0.2;
+}*/
+/*
 .catalog-ice:hover {
 	background-color: red;
 	opacity: 0.2;
 	z-index: 1;
-}
+}*/
 	/*-- БЛОК ОПИСАНИЯ КОМПАНИИ --*/
 .description {
 	width: 1146px;
-	height: 306px;
+	height: 306x;
 	background-image: url("../img/wafer.jpg");
 	background-repeat: no-repeat;
 	margin-top: 0px;
 	border-radius: 15px;	
 }
 .description .about {
-	margin-top: 30px;
+	margin-top: 25px;
 	padding-left: 21px;
 	padding-right: 30px;
 }
 .description .make {
 	float: left;
-	width: 540px;
-	height: 188px;
+	width: 555px;
+	height: 198px;
 }
 .description .delivery {
 	float: right;
 	width: 560px;
-	height: 188px;
+	height: 198px;
 }
 .description .about span {
 	font-size: 24px;
@@ -588,16 +626,23 @@ body > input[type="radio"] {
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
 }
+.description .make {
+	margin-top: 22px;
+}
 .description .make p {
 	position: relative;
 	display: inline-block;
 	margin-left: 20px;
 	padding-left: 57px;
+	margin-top: 0px;
 	font-size: 16px;
 	line-height: 22px;
 	color: #000000;
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.description .make p:first-child {
+	margin-bottom: 21px;
 }
 .description .make p:first-child::after {
 	content: "";
@@ -617,16 +662,26 @@ body > input[type="radio"] {
 	height: 49px;
 	background: transparent url("../img/leaf.png") no-repeat;
 }
+.description .delivery {
+	margin-top: 6px;
+}
 .description .delivery p {
 	position: relative;
 	display: inline-block;
 	margin-left: 0px;
 	padding-left: 57px;
+	margin-bottom: 0;
 	font-size: 16px;
 	line-height: 22px;
 	color: #000000;
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.description .delivery p:first-child {
+    margin-bottom: 5px;
+}
+.description .delivery p:nth-child(2) { 
+	padding-right: 12px;
 }
 .description .delivery p:first-child::after {
 	content: "";
@@ -651,7 +706,7 @@ body > input[type="radio"] {
 .news-sub {
 	width: 1146px;
 	height: 220px;
-	margin-top: 40px;
+	margin-top: 41px;
 	margin-bottom: 40px;
 }
 .news-sub .news {
@@ -679,6 +734,8 @@ body > input[type="radio"] {
 	margin-left: 20px;
 	font-size: 16px;
 	line-height: 22px;
+	margin-top: 23px;
+	margin-bottom: 5px;
 	color: #000000;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
@@ -701,10 +758,10 @@ body > input[type="radio"] {
 	border-radius: 15px;
 }
 .news-sub .sub p {
-	margin-top: 31px;
+	margin-top: 29px;
 	margin-left: 21px;
 	margin-right: 10px;
-	margin-bottom: 28px;
+	margin-bottom: 35px;
 	font-size: 16px;
 	line-height: 22px;
 	color: #000000;
@@ -715,10 +772,10 @@ body > input[type="radio"] {
 	margin-right: 0px;
 }
 .sub input {
-	width: 368px;
+	width: 353px;
 	margin-left: 20px;
-	margin-right: 5px;
-	padding-left: 16px;
+	margin-right: 8px;
+	padding-left: 13px;
 	height: 42px;
 	border-radius: 5px;
 	border: 1px solid #d3d3d2;
@@ -726,9 +783,9 @@ body > input[type="radio"] {
 .sub .btn-send {
 	display: inline-block;
 	width: 129px;
-	padding: 10px 0;
+	padding: 10px 19px;
 	text-align: center;
-	font-size: 16px;
+	font-size: 18px;
 	line-height: 24px;
 	color: #ffffff;
 	font-weight: 700;
@@ -760,9 +817,9 @@ body > input[type="radio"] {
 .driving-address {
 	min-width: 1200px;
 	min-height: 430px;
-	margin-left: 23.5px;
+	margin-left: 31.5px;
 	margin-right: 23.5px;
-	margin-bottom: 19px;
+	margin-bottom: 20px;
 	background-image: url("../img/map.jpg");
 	background-repeat: no-repeat;
 }
@@ -782,12 +839,6 @@ body > input[type="radio"] {
 .driving  .line-2 {
 	display: inline-block;
 	margin-left: 26px;
-}
-.driving  .line-1:first-child {
-	margin-top: 20px;
-	margin-bottom: 4px;
-}
-.driving  .line-1 {
 	font-size: 14px;
 	line-height: 20px;
 	color: #000000;
@@ -795,6 +846,28 @@ body > input[type="radio"] {
 	font-family: "Roboto", "Tahoma", sans-serif;
 }
 .driving  .line-2 {
+	display: inline-block;
+	margin-left: 26px;
+	font-size: 18px;
+	line-height: 24px;
+	color: #000000;
+	font-weight: 700;
+	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.top-lines  .line-1:first-child {
+	margin-top: 29px;
+	margin-bottom: 1px;
+}
+.bottom-lines  .line-1 {
+	margin-top: 18px;
+    margin-bottom: 4px;
+	font-size: 14px;
+	line-height: 20px;
+	color: #000000;
+	font-weight: 400;
+	font-family: "Roboto", "Tahoma", sans-serif;
+}
+.bottom-lines  .line-2 {
 	font-size: 18px;
 	line-height: 24px;
 	color: #000000;
@@ -804,11 +877,11 @@ body > input[type="radio"] {
 .driving .btn-feedback {
 	display: inline-block;
 	width: 252px;
-	margin-top: 25px;
-	margin-left: 21px;
+	margin-top: 26px;
+	margin-left: 26px;
 	margin-right: 0px;
 	margin-bottom: 30px;
-	padding: 12px 0px;
+	padding: 8px 0px;
 	text-align: center;
 	font-size: 18px;
 	line-height: 24px;
@@ -841,11 +914,7 @@ body > input[type="radio"] {
 
 
 /*-- СТРАНИЦА CATALOG --*/
-/*.main-nav li:first-child a {
-	position: relative;
 
-	background: none !important;
-}*/
 	/*-- БЛОК ВЫБОРА МОРОЖЕННЫХ --*/
 .selection-ice h2 {
 	font-size: 35px;
@@ -886,6 +955,10 @@ body > input[type="radio"] {
 
 	/*-- БЛОК АССОРТИМЕНТА МОРОЖЕННЫХ --*/
 
+.goods {
+	margin-bottom: 50px;
+	border-bottom-color: red;
+}
 .goods .case-catalog  {
 	float: left;
 	width: 267px;
@@ -893,7 +966,6 @@ body > input[type="radio"] {
 	margin-right: 26px;
 	margin-top: 40px;
 	text-align: center;
-	/*vertical-align: top;*/
 }
 .goods .cost {
 	position: relative;
@@ -901,7 +973,6 @@ body > input[type="radio"] {
 	float: left;
 	width: 154px;
 	height: 45px;
-	/*left: 0;*/
 	margin: 0;
 	padding: 0;
 	font-size: 32px;
@@ -909,13 +980,13 @@ body > input[type="radio"] {
 	color: #ffffff;
 	font-weight: 700;
 	font-family: "Roboto", "Tahoma", sans-serif;
+	text-shadow: 1px 1px 3px #5a6762;
 	cursor: pointer;
 }
 .goods .specification {
 	position: relative;
 	bottom: 35px;
 	float: left;
-	/*width: 154px;*/
 	height: 50px;
 	margin: 0;
 	padding: 0;
@@ -939,32 +1010,60 @@ body > input[type="radio"] {
 	text-decoration: none;
 	padding: 0 18px;
 }
-.goods .case-catalog:nth-child(4),
-.goods .case-catalog:nth-child(8),
-.goods .case-catalog:nth-child(12) {
+.goods .case-catalog:nth-child(4n){
 	margin-right: 0;
 }
 .goods .case-catalog img {
 	border-radius: 135px;
 }
+	/*-- ПЕРЕКЛЮЧАТЕЛЬ СТРАНИЦ --*/
 .goods .catalog-pages {
-	float: right;/*
-	margin-bottom: 50px;*/
+	float: right;
+	/*margin-bottom: 50px;*/
 	margin-top: 82px;
+}
+.pages-ices {
+	margin: 0;
+	padding: 0;
 }
 .goods .catalog-pages li {
 	display: inline-block;
-	margin-right: 10px;
 }
-.goods .catalog-pages li a {	
+.catalog-pages  a {	
 	display: block;
+	min-width: 27px;
+	height: 26px;
+	padding: 0 0;
+	text-align: center;
 	font-size: 16px;
-	line-height: 18px;
+	line-height: 26px;
+	vertical-align: middle;
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
 	text-decoration: none;
+	border-radius: 100px;
+	cursor: pointer;
+	/*background: red;*/
 }
+
+.catalog-pages .active-page {
+    background-color: #ffffff;
+	color: #000000;
+}
+.catalog-pages  .hover:hover {
+	color: #000000;
+	background: #9db1a5;
+}
+.prev {
+    text-indent: -3500px;
+	background:  transparent url("../img/arrow_left.png") no-repeat center;
+}
+.next {
+    text-indent: -3600px;
+	background:  transparent url("../img/arrow_right.png") no-repeat center;
+}
+
 	/*-- /БЛОК АССОРТИМЕНТА МОРОЖЕННЫХ --*/
 /*-- /СТРАНИЦА CATALOG --*/
 
@@ -972,10 +1071,15 @@ body > input[type="radio"] {
 	/*-- СОЦИАЛЬНЫЕ КНОПКИ --*/
 .footer-social {
 	float: left;
-	width: 185px;
+	width: 191px;
 	/*margin-top: 36px;*/
-	text-align: center;
+	text-align: left;
 	/*font-size: 0;*/
+	margin-top: 15px;
+	
+}
+.footer-social a {
+	padding-right: 7px;
 }
 .social-btn {
 	display: inline-block;
@@ -995,10 +1099,10 @@ body > input[type="radio"] {
 	background:  transparent url("../img/ins.png") no-repeat center;
 }
 .social-btn-vk {
-	background:  transparent url("../img/vk.png") no-repeat center;
+	background:  transparent url("../img/f.png") no-repeat center;
 }
 .social-btn-fb {
-	background:  transparent url("../img/f.png") no-repeat center;
+	background:  transparent url("../img/vk.png") no-repeat center;
 }
 .social-btn-tv:hover {
 	background:  transparent url("../img/tv_hover.png") no-repeat center;
@@ -1028,9 +1132,10 @@ body > input[type="radio"] {
 	/*-- КОНТАКТЫ --*/
 .footer-contacts {
 	float: left;
-	width: 326px;
+	width: 334px;
 	margin-left: 210px;
 	text-align: left;
+	margin-top: 15px;
 }
 .footer-main {
 	list-style: none;
@@ -1060,12 +1165,12 @@ body > input[type="radio"] {
 }
 .footer-main li:nth-child(2)  a  {
 	padding-right: 0px;
-	padding-left: 20px;
+	padding-left: 27px;
 	margin-right: 0;
 }
 .footer-main li:last-child  a {
 	padding-right: 0px;
-	padding-left: 32px;
+	padding-left: 40px;
 	margin-right: 0;
 }
  .footer-main .heart::before {
@@ -1090,6 +1195,7 @@ body > input[type="radio"] {
 	position: relative;
 	display: inline-block;
 	margin: 0;
+	margin-left: 32px;
 	padding: 10px 55px;
 	text-align: left;
 	font-size: 0;
@@ -1110,6 +1216,8 @@ body > input[type="radio"] {
 	/*opacity: 1;*/
 }
 .footer-copyright p {
+	margin-left: 30px;
+    margin-top: 3px;
 	font-size: 12px;
 	line-height: 18px;
 	color: #ffffff;
