--- a/css/style.css
+++ b/css/style.css
@@ -583,7 +583,22 @@ body > input[type="radio"] {
 	font-family: "Roboto", "Tahoma", sans-serif;
 	/*text-decoration: underline;*/
 	text-align: center;
-}/*
+}
+.catalog-ice:first-child .underline::after { /*Как сделать подчеркивание на две строки?*/
+	content: "";
+	position: absolute;
+	right: 26px;
+	/*bottom: 0px;*/
+	left: 26px;
+	/*width: 100%;*/
+	height: 1px;
+	background-color: red;
+}
+.catalog-ice:first-child  .underline {
+	display: block;
+	/*padding: 0px 0px;*/
+}
+/*
 .catalog-ice .specification:hover {
 	text-decoration: underline;
 	underline-opacity: 0.2; 
