--- a/css/style.css
+++ b/css/style.css
@@ -581,23 +581,23 @@ body > input[type="radio"] {
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	/*text-decoration: underline;*/
 	text-align: center;
+	text-decoration: underline;
 }
-.catalog-ice:first-child .underline::after { /*Как сделать подчеркивание на две строки?*/
+/*.catalog-ice:first-child .underline::after { /*Как сделать подчеркивание на две строки?
 	content: "";
 	position: absolute;
 	right: 26px;
-	/*bottom: 0px;*/
+	/*bottom: 0px;
 	left: 26px;
-	/*width: 100%;*/
+	/*width: 100%;
 	height: 1px;
 	background-color: red;
-}
-.catalog-ice:first-child  .underline {
+}*/
+/*.catalog-ice:first-child  .underline { /*Как сделать подчеркивание на две строки?
 	display: block;
-	/*padding: 0px 0px;*/
-}
+	padding: 0px 3px;
+}*/
 /*
 .catalog-ice .specification:hover {
 	text-decoration: underline;
@@ -1205,7 +1205,7 @@ body > input[type="radio"] {
 	margin: 0;
 	padding: 0;
 	/*margin-top: 19px;*/
-}
+}/*
 .footer-copyright .btn-copyright {
 	position: relative;
 	display: inline-block;
@@ -1213,6 +1213,7 @@ body > input[type="radio"] {
 	margin-left: 32px;
 	padding: 10px 55px;
 	text-align: left;
+	margin-bottom: 4px;
 	font-size: 0;
 	line-height: 18px;
 	color: #ffffff;
@@ -1228,17 +1229,23 @@ body > input[type="radio"] {
 	width: 108px;
 	height: 38px;
 	background: transparent url("../img/made_footer.png") no-repeat;
-	/*opacity: 1;*/
+	
+}*/
+.footer-copyright .btn-copyright {
+	font-size: 0;
+}
+.footer-copyright img {
+	margin-left: 31px;
 }
 .footer-copyright p {
 	margin-left: 30px;
-    margin-top: 3px;
+    margin-top: -5px;
 	font-size: 12px;
 	line-height: 18px;
 	color: #ffffff;
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	/*text-decoration: none;*/
+	
 }
 .footer-copyright a {
 	font-size: 12;
