--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,13 @@ body::after {
 }/*-- /ШАПКА --*/
 
 /*-- БЛОК ХЛЕБНЫХ КРОШЕК--*/
+.breadcrumbs {
+	float: left;
+	width: 300px;
+	/*margin-top: 15px;
+	width: 175px;
+	text-align: right;*/
+}
 .bread-main-nav {
     list-style: none;
 	padding: 0;
@@ -857,7 +864,7 @@ body > input[type="radio"] {
 	width: 302px;
 	height: 305px;
 	background-color: white;
-	border-radius: 10px;
+	border-radius: 15px;
 	position: relative;
     left: 870px;
     bottom: -62px;
@@ -945,6 +952,7 @@ body > input[type="radio"] {
 	height: 131px;
 }
 .selection-ice h2 {
+	margin-top: 0;
 	font-size: 35px;
 	line-height: 41px;
 	color: #ffffff;
@@ -1210,25 +1218,30 @@ body > input[type="radio"] {
 	/*-- БЛОК АССОРТИМЕНТА МОРОЖЕННЫХ --*/
 .goods {
 	margin-bottom: 50px;
-	border-bottom-color: red;
+	padding-top: 40px;
 }
 .goods .case-catalog  {
 	float: left;
-	width: 267px;
-	height: 322px;
-	margin-right: 26px;
-	margin-top: 40px;
+	width: 293px;
+	/*min-height: 322px;*/
+	margin-right: 13px;
+	margin-left: -13px;
+	/*margin-top: 40px;*/
+	padding-top: 6px;
+	padding-bottom: 20px;
 	text-align: center;
 }
 .goods .cost {
 	position: relative;
 	bottom: 60px;
-	float: left;
+	text-align: left;
+	display: inline-block;
+	vertical-align: top;
+	/*float: left;
 	width: 154px;
-	height: 45px;
-	margin: 0;
-	padding: 0;
-	font-size: 32px;
+	height: 45px;*/
+	margin-right: 90px;
+	font-size: 45px;
 	line-height: 45px;
 	color: #ffffff;
 	font-weight: 700;
@@ -1236,39 +1249,83 @@ body > input[type="radio"] {
 	text-shadow: 1px 1px 3px #5a6762;
 	cursor: pointer;
 }
+.goods .weight {
+	font-size: 32px;
+	line-height: 45px;
+	color: #ffffff;
+	font-weight: 700;
+	font-family: "Roboto", "Tahoma", sans-serif;
+	text-shadow: 1px 1px 3px #5a6762;
+	margin-left: 6px;
+	cursor: pointer;
+}
 .goods .specification {
 	position: relative;
-	bottom: 35px;
-	float: left;
-	height: 50px;
-	margin: 0;
-	padding: 0;
+	bottom: 37px;
 	font-size: 16px;
 	line-height: 22px;
 	color: #ffffff;
 	font-weight: 500;
 	font-family: "Roboto", "Tahoma", sans-serif;
-	/*text-decoration: none;*/
+	text-align: center;
+	text-decoration: underline;
+}
+.btn-hover-shadow {
+	display: none;
 }
 .goods .btn-show-catalog {
+	float: left;
 	position: relative;
-	Float: left;
 	width: 168px;
-	height: 25px;
+	margin: 0 46px;
+	padding: 10px 16px;
+	text-align: center;
 	font-size: 18px;
 	line-height: 24px;
 	color: #ffffff;
 	font-weight: 700;
 	font-family: "Roboto", "Tahoma", sans-serif;
 	text-decoration: none;
-	padding: 0 18px;
+	text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+	background: #f26843;
+	background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+	background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+	background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+	border-radius: 100px;
+	box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+}
+.goods .case-catalog:hover  {
+	background-color: #a8b9ae;
+	display: block;
+}
+.goods .btn-show-catalog:hover {
+	background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+	background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+	background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+	box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+.goods .btn-show-catalog:active {
+	background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
+	background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
+	background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+	box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+.goods .case-catalog:hover  .btn-hover-shadow {
+	background-color: #a8b9ae;
+	display: block;
 }
 .goods .case-catalog:nth-child(4n){
 	margin-right: 0;
 }
+.goods .case-catalog:nth-child(4n) {
+	margin-right: -13px;
+}
 .goods .case-catalog img {
 	border-radius: 135px;
-}
+}/*
+.case-catalog .sub-catalog {
+	background-color: red;
+}*/
 	/*-- ПЕРЕКЛЮЧАТЕЛЬ СТРАНИЦ --*/
 .goods .catalog-pages {
 	float: right;
