--- a/css/style.css
+++ b/css/style.css
@@ -269,15 +269,15 @@ body::after {
 .breadcrumbs {
 	float: left;
 	width: 300px;
-	/*margin-top: 15px;
-	width: 175px;
-	text-align: right;*/
+	position: relative;
+    right: 546px;
+    bottom: 0px;
 }
 .bread-main-nav {
     list-style: none;
 	padding: 0;
 	margin: 0;
-	margin-top: 16px;
+	margin-top: 40px;
 }
 .bread-main-nav  li {
 	display: inline-block;
@@ -291,7 +291,7 @@ body::after {
 	font-weight: 400;
 	font-family: "Roboto", "Tahoma", sans-serif;
 	text-decoration: none;
-	padding-right: 15px;
+	padding-right: 16px;
 	/*background: #000000;*/
 }
 .bread-main-nav  li:last-child a {
@@ -953,6 +953,7 @@ body > input[type="radio"] {
 }
 .selection-ice h2 {
 	margin-top: 0;
+	margin-bottom: 21px;
 	font-size: 35px;
 	line-height: 41px;
 	color: #ffffff;
@@ -1261,7 +1262,7 @@ body > input[type="radio"] {
 }
 .goods .specification {
 	position: relative;
-	bottom: 37px;
+	top: -37px;
 	font-size: 16px;
 	line-height: 22px;
 	color: #ffffff;
@@ -1270,12 +1271,15 @@ body > input[type="radio"] {
 	text-align: center;
 	text-decoration: underline;
 }
-.btn-hover-shadow {
+.case-catalog .btn-hover-shadow {
+	/*height: 30px;*/
+	background-color: #a8b9ae;
 	display: none;
 }
-.goods .btn-show-catalog {
-	float: left;
-	position: relative;
+.case-catalog .btn-show-catalog {
+	position: absolute;
+	left: 46px;
+	bottom: -250px;
 	width: 168px;
 	margin: 0 46px;
 	padding: 10px 16px;
@@ -1296,6 +1300,12 @@ body > input[type="radio"] {
 }
 .goods .case-catalog:hover  {
 	background-color: #a8b9ae;
+}/*
+.goods .btn-hover-shadow:hover .btn-show-catalog {
+	background-color: #a8b9ae;
+}*/
+.goods .case-catalog .btn-hover-shadow:hover  .btn-show-catalog {
+	background-color: #a8b9ae;
 	display: block;
 }
 .goods .btn-show-catalog:hover {
@@ -1309,10 +1319,6 @@ body > input[type="radio"] {
 	background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
 	background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
 	box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
-}
-.goods .case-catalog:hover  .btn-hover-shadow {
-	background-color: #a8b9ae;
-	display: block;
 }
 .goods .case-catalog:nth-child(4n){
 	margin-right: 0;
